fix: vertical alignment and spacing

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,4 +1,5 @@
-%container {
+/* container for max-width-wrapper class */
+@mixin container {
 	max-width: 1440px !important;
 	width: 90% !important;
 }
