--- a/src/app/components/footer/footer.component.scss
+++ b/src/app/components/footer/footer.component.scss
@@ -169,32 +169,25 @@ footer {
 }
 
 .copyright-wrapper {
-	max-width: 1575px !important;
+	padding: 20px 0px;
 
-	@media (min-width: 1575px) {
-		padding-left: 70px;
-		padding-right: 70px;
-	}
+	// @media (max-width: 1200px) {
+	// 	padding-left: 45px;
+	// 	padding-right: 45px;
+	// }
 
-	padding: 20px 73px;
+	// @media (max-width: 992px) {
+	// 	padding-left: 32px;
+	// 	padding-right: 32px;
+	// }
 
-	@media (max-width: 1200px) {
-		padding-left: 45px;
-		padding-right: 45px;
-	}
+	// @media (max-width: 576px) {
+	// 	padding-left: 30px;
+	// 	padding-right: 30px;
+	// }
 
-	@media (max-width: 992px) {
-		padding-left: 32px;
-		padding-right: 32px;
-	}
-
-	@media (max-width: 576px) {
-		padding-left: 30px;
-		padding-right: 30px;
-	}
-
-	@media (max-width: 500px) {
-		padding-left: 11px;
-		padding-right: 11px;
-	}
+	// @media (max-width: 500px) {
+	// 	padding-left: 11px;
+	// 	padding-right: 11px;
+	// }
 }
